--- a/views/playlists/index.ejs
+++ b/views/playlists/index.ejs
@@ -12,23 +12,21 @@
 <table class="table table-striped">
   <thead>
   <tr>
-    <td class="heading">     </td>
+    <td class="heading">Art</td>
     <td class="heading">Title</td>
     <td class="heading">Genre</td>
     <td class="heading">Location</td>
-    <td class="heading">Edit </td>
-    <td class="heading">Delete</td>
+
   </tr>
   </thead>
   <% playlist.forEach(function(playlist){ %>
 <tr>
-  <td><a href="/playlists/<%= song.id%>"><%= playlist.title %></a></td>
-  <td><img src="<%= song.art %>" width="100px"></td>
-  <td><%= playlist.title %></td>
+  <td><img src="<%= playlist.art %>" width="100px"></td>
+  <td><a href="/playlists/<%= playlist.id%>"><%= playlist.title %></a></td>
   <td><%= playlist.genre %></td>
   <td><%= playlist.location %></td>
-  <td><a href="/playlists/<%= song.id%>/edit"><button class="btn btn-default" >Edit</button></a></td>
-  <td><form action="/playlists/<%= song.id%>?_method=delete" method="POST"><button class="btn btn-default">Delete</button></form></td>
+  <td><a href="/playlists/<%= playlist.id%>/edit"><button class="btn btn-default" >Edit</button></a></td>
+  <td><form action="/playlists/<%= playlist.id%>?_method=delete" method="POST"><button class="btn btn-default">Delete</button></form></td>
 </tr>
   <%}); %>
 </table>
