Added full CRUD for playlist resource

--- a/views/playlists/new.ejs
+++ b/views/playlists/new.ejs
@@ -11,10 +11,10 @@
   <table class=" table table-striped">
   <form action="/playlists" method="POST">
   <tr>
-  <td class="heading">Art:<input type="text" name="playlist[title]" id="art"></td>
-  <td class="heading">Title:<input type"text" name="playlist[artist]" id="title"></td>
-  <td class="heading">Genre:<input type"text" name="playlist[album]" id="genre"></td>
-  <td class="heading">Location:<input type"text" name="playlist[year]" id="location"></td>
+  <td class="heading">Art:<input type="text" name="playlist[art]" id="art"></td>
+  <td class="heading">Title:<input type"text" name="playlist[title]" id="title"></td>
+  <td class="heading">Genre:<input type"text" name="playlist[genre]" id="genre"></td>
+  <td class="heading">Location:<input type"text" name="playlist[location]" id="location"></td>
   </tr>
   </table>
   <center><td class="heading"><button name="button" class="btn btn-default" >Submit</button></td></center>
