Added show page for playlist resource, true CRUD

--- a/views/playlists/edit.ejs
+++ b/views/playlists/edit.ejs
@@ -16,9 +16,9 @@
   <td class="heading">Title:<input type"text" name="playlist[title]" id="title" value="<%= playlist.title %>"></td>
   <td class="heading">Genre:<input type"text" name="playlist[genre]" id="genre" value="<%= playlist.genre %>"></td>
   <td class="heading">Location:<input type"text" name="playlist[location]" id="location" value="<%= playlist.location %>"></td>
+  <td class="heading"><button name="button" class="btn btn-default">Submit</button></td>
   </tr>
   </table>
-  <center><td class="heading"><button name="button" class="btn btn-default">Submit</button></td></center>
   </form>
 
 
