--- a/views/songs/index.ejs
+++ b/views/songs/index.ejs
@@ -1,41 +1,32 @@
 <% include ../partials/header %>
 <nav class="navbar navbar-default navbar-fixed-top navbar transparent">
-      <a class="navbar-brand" href="/songs">Playlisted</a>
+      <a class="navbar-brand" href="/playlists">Playlisted</a>
 
 <form class="navbar-form navbar-right" role="search" action="/searchresults">
         <div class="form-group">
-          <a href="/songs/new" class="btn btn-default">Add Song</a>
-          <input type="search" name="query"    placeholder="Search iTunes">
-        </div>
-        <button type="submit" class="btn btn-default">Search</button>
+          <a href="/playlists/new" class="btn btn-default">New Playlist</a>
+          <a href="/logout" class="btn btn-default">Log Out</a>
       </form> 
 </nav>
 <center><h1>Playlist</h1></center>
 <table class="table table-striped">
   <thead>
   <tr>
-    <td class="heading">Title</td>
-    <td class="heading">Artist</td>
-    <td class="heading">Album</td>
-    <td class="heading">Year</td>
-    <td class="heading">Genre</td>
     <td class="heading">Art</td>
-    <td class="heading">Edit </td>
-    <td class="heading">Delete</td>
+    <td class="heading">Title</td>
+    <td class="heading">Genre</td>
+    <td class="heading">Location</td>
   </tr>
   </thead>
-  <% song.forEach(function(song){ %>
 <tr>
-  <td><a href="/songs/<%= song.id%>"><%= song.title %></a></td>
-  <td><%= song.artist %></td>
-  <td><%= song.album %></td>
-  <td><%= song.year %></td>
-  <td><%= song.genre %></td>
-  <td><img src="<%= song.art %>" width="100px"></td>
-  <td><a href="/songs/<%= song.id%>/edit"><button class="btn btn-default" >Edit</button></a></td>
-  <td><form action="/songs/<%= song.id%>?_method=delete" method="POST"><button class="btn btn-default">Delete</button></form></td>
+  <td><img src="<%= playlist.art %>" width="100px" height="100px"></td>
+  <td><a href="/playlists/<%= playlist.id%>"><%= playlist.title %></a></td>
+  <td><%= playlist.genre %></td>
+  <td><%= playlist.location %></td>
+  <td><a href="/playlists/<%= playlist.id%>/songs/new"><button class="btn btn-default" >Add a Song</button></a></td>
+  <td><a href="/playlists/<%= playlist.id%>/edit"><button class="btn btn-default" >Edit</button></a></td>
+  <td><form action="/playlists/<%= playlist.id%>?_method=delete" method="POST"><button class="btn btn-default">Delete</button></form></td>
 </tr>
-  <%}); %>
 </table>
 
 
