--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,8 +10,8 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.4/lumen/bootstrap.min.css">
-  <link rel="stylesheet" href="/css/style.css">
-
+<!--   <link rel="stylesheet" href="/css/style.css">
+ -->
 </head>
 <body class = "container" style="padding-top: 60px">
 
