--- a/views/songs/searchresults.ejs
+++ b/views/songs/searchresults.ejs
@@ -1,11 +1,9 @@
 <% include ../partials/header %>
-  <center><h1>Add a song from iTunes</h1></center>
 <nav class="navbar navbar-default navbar-fixed-top navbar transparent">
-      <a class="navbar-brand" href="/songs">Playlisted</a>
+      <a class="navbar-brand" href="/playlists">Playlisted</a>
 
 <form class="navbar-form navbar-right" role="search" action="/searchresults">
         <div class="form-group">
-          <a href="/songs/new" class="btn btn-default">Add Song</a>
           <input type="search" name="query"    placeholder="Search iTunes">
         </div>
         <button type="submit" class="btn btn-default">Search</button>
@@ -13,7 +11,7 @@
 </nav>
   <table class=" table table-striped">
   <tr>
-  <form action="/songs" method="POST">
+  <form action="/playlists/<%= playlistId %>/songs" method="POST">
   <td class="heading">Art:<input type"text" name="song[art]" id="art" value="<%= song.artworkUrl100 %>"></td>
   <td class="heading">Title:<input type="text" name="song[title]" id="title" value="<%= song.trackName %>"></td>
   <td class="heading">Artist:<input type"text" name="song[artist]" id="artist" value="<%= song.artistName %>"></td>
