Work on show song by ID

--- a/views/playlists/index.ejs
+++ b/views/playlists/index.ejs
@@ -12,10 +12,10 @@
 <table class="table table-striped">
   <thead>
   <tr>
-    <td class="heading">Art</td>
-    <td class="heading">Title</td>
-    <td class="heading">Genre</td>
-    <td class="heading">Location</td>
+    <td class="heading"></td>
+    <td class="heading"><strong>Title:</strong></td>
+    <td class="heading"><strong>Genre:</strong></td>
+    <td class="heading"><strong>Location:</strong></td>
 
   </tr>
   </thead>
