Fixed show routing

--- a/views/songs/searchresults.ejs
+++ b/views/songs/searchresults.ejs
@@ -20,7 +20,7 @@
   <td class="heading">Genre:<input type"text" name="song[genre]" id="genre" value="<%= song.primaryGenreName %>"></td>
   </tr>
   </table>
-    <center><td class="heading"><button name="button" class="btn btn-default">Submit</button></td></center>
+    <center><td class="heading"><button name="button" class="btn btn-default">Add to Playlist</button></td></center>
   </form>
 
 
