--- a/views/playlists/show.ejs
+++ b/views/playlists/show.ejs
@@ -44,7 +44,7 @@
   <% playlist.songs.forEach(function(song){ %>
 <tr>
   <td><img src="<%= song.art %>" width="100px"></td>
-  <td><a href="/songs/<%= song.id%>"><%= song.title %></a></td>
+  <td><a href="/playlists/<%= playlist.id%>/songs/<%= song.id%>"><%= song.title %></a></td>
   <td><%= song.artist %></td>
   <td><%= song.album %></td>
   <td><%= song.year %></td>
